name:                tls
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tls#readme
license:             GPL-3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tls
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ghc-prim
                     , attoparsec
                     , cereal
                     , text
                     , bytestring
                     , vector
                     , cryptonite

                     -- temp dependencies for testing
                     , network-simple
                     , split

  ghc-options:         -fwarn-incomplete-patterns -Werror

  other-modules:       Network.TLS.Pure.Extension
                     , Network.TLS.Pure.Version
                     , Network.TLS.Pure.Packet
                     , Network.TLS.Pure.Packet.Handshake
                     , Network.TLS.Pure.Handshake.Header
                     , Network.TLS.Pure.Wire
                     , Network.TLS.Pure.Cipher
                     , Network.TLS.Pure.Cipher.Serialize
                     , Util
                     , TestTypes
                     -- , Network.TLS.Pure.
                     -- , Network.TLS.Pure.Packet.Handshake
