name:                tls
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tls#readme
license:             GPL-3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , cereal
                     , text
                     , bytestring
                     , vector
                     , cryptonite
                     , memory
                     , mtl
                     , errors
                     , monad-loops

                     , bytes
                     , mmorph

  ghc-options:         -fwarn-incomplete-patterns -Werror

  exposed-modules:     Network.TLS.Pure.Cipher
                     , Network.TLS.Pure.Extension
                     , Network.TLS.Pure.Extension.KeyShare
                     , Network.TLS.Pure.Extension.ServerNameIndication
                     , Network.TLS.Pure.Extension.SignatureAlgorithms
                     , Network.TLS.Pure.Extension.SupportedGroups
                     , Network.TLS.Pure.Extension.SupportedVersions
                     , Network.TLS.Pure.Handshake
                     , Network.TLS.Pure.Handshake.ClientHello
                     , Network.TLS.Pure.Handshake.Common
                     , Network.TLS.Pure.Handshake.ServerHello
                     , Network.TLS.Pure.Handshake.MessageType
                     , Network.TLS.Pure.Packet
                     , Network.TLS.Pure.Record
                     , Network.TLS.Pure.Serialization
                     , Network.TLS.Pure.Version
                     , Network.TLS.Pure.Debug
                     , Network.TLS.Pure.Error
                     , Class

executable tls-debug
  hs-source-dirs:      bin
  default-language:    Haskell2010
  main-is:             Main.hs
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N -Wall -Wno-unused-do-bind -Wno-orphans
               -Wno-missing-signatures -Wno-unused-local-binds
  build-depends:       base
                     , tls
                     , cryptonite
                     , bytestring
                     , cereal
                     , vector
                     , network-simple
                     , split
                     , ghc-prim

test-suite tls-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , tls
                     , tasty
                     , tasty-hunit

  other-modules:       Network.TLS.Pure.SerializationSpec
